# PhotoSyncTool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  ROADMAP.md  blur_tool.py  dedupe_photos.py  dedupe_snap_only.py  photo_manager_core.py  photo_manager_features.py  photo_manager_google_drive.py  photo_manager_gui.py  photo_manager_index.py  photo_manager_qt.py  photo_manager_service.py  pyproject.toml  remove_name_duplicates.py  requirements.txt  sort_photos_script.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml  windows-exe.yml
docs/: GOOGLE_DRIVE_SYNC.md  SCREENSHOTS.md  SYSTEMD.md  index.html
docs/assets/: site.css
installer/: PhotoManagerPro.iss
photosync_tool_assets/: __init__.py
scripts/: build_release.sh  capture_demo_screenshots.py
tests/: fixtures.py  test_photo_manager_core.py  test_photo_manager_features.py  test_photo_manager_google_drive.py  test_photo_manager_qt_smoke.py  test_photo_manager_service.py  test_sort_photos_script.py  test_version_consistency.py
