[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photosync-tool"
version = "0.1.4"
description = "Local desktop tool for organizing, syncing, indexing, and reviewing photos."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Filipluke" }
]
keywords = ["photos", "sync", "desktop", "pyside6", "blur-detection", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = [
    "PySide6",
    "Pillow",
    "opencv-python",
    "numpy",
    "Send2Trash",
    "watchdog",
    "pywin32; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "build",
    "pre-commit",
    "pytest",
    "ruff",
    "twine",
]
ai = [
    "pytesseract",
]
cloud = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]
exe = [
    "pyinstaller",
]

[project.urls]
Homepage = "https://github.com/Filipluke/PhotoSyncTool"
Repository = "https://github.com/Filipluke/PhotoSyncTool"
Issues = "https://github.com/Filipluke/PhotoSyncTool/issues"

[project.scripts]
photo-manager-pro = "photo_manager_gui:main"
photo-manager-service = "photo_manager_service:main"
photo-manager-index = "photo_manager_index:main"
photo-manager-drive = "photo_manager_google_drive:main"
photo-blur-tool = "blur_tool:main"
photo-sorter = "sort_photos_script:main"

[tool.setuptools]
py-modules = [
    "blur_tool",
    "photo_manager_core",
    "photo_manager_features",
    "photo_manager_gui",
    "photo_manager_google_drive",
    "photo_manager_index",
    "photo_manager_qt",
    "photo_manager_service",
    "sort_photos_script",
]
packages = ["photosync_tool_assets"]

[tool.setuptools.package-data]
photosync_tool_assets = ["*.png", "*.ico"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "build",
    "dist",
    "release",
    "releases",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
